# OpenGlLesson1

./: CMakeLists.txt  MainEventHandler.cpp  MainEventHandler.h  MainWindow.cpp  MainWindow.ui  Readme.md  Singleton.h  ui_MainWindow.h
Artoolkit/: ARMarkerNFT.cpp  VirtualEnvironment.cpp
Resources/: Picture.qrc  qrc_Picture.cpp  ui_MainWindow.h
Resources/DataNFT/: b1.fset  b1.fset3  b1.iset  b2.fset  b2.fset3  b2.iset  b3.fset  b3.fset3  b3.iset  b4.fset  b4.fset3  b4.iset  f1.fset  f1.fset3  f1.iset  f2.fset  f2.fset3  f2.iset  f3.fset  f3.fset3  f3.iset  f4.fset  f4.fset3  f4.iset  f6.fset  f6.fset3  f6.iset  f7.fset  f7.fset3  f7.iset  f9.fset  f9.fset3  f9.iset
Resources/OSG/: simpleObj.3ds
Resources/html/: constructDetails.html  description.html  modelNameTitle.html  technicalFeatures.html
Viewer/: OsgViewerFromWindow.cpp  OsgViewerFromWindow.h
WidgetOpenGL/: OpenGLWrapper.cpp  OpenGLWrapper.h  myOpenGL.cpp  myOpenGL.h
gui/: MainWindow.cpp  MainWindow.ui  _MainWindow.ui
